welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: not found: value avnace
avance (); avnace(); avance()
           ^